--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* style.css */
 body {
-  background: #f4f4f4;
+  background: #94c2f3;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,8 +9,8 @@ body {
 }
 
 .calculator {
-  background: white;
-  padding: 20px;
+  background: #979fa7 ;
+  padding: 30px;
   border-radius: 15px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -20,13 +20,19 @@ body {
   width: 100%;
   height: 50px;
   font-size: 24px;
-  text-align: right;
+  text-align: center;
   margin-bottom: 10px;
   padding: 5px;
   border: 2px solid #ccc;
   border-radius: 10px;
+  background-color: #434040;
+  color: aquamarine;
 }
-
+#k
+{
+    background-color: #979fa7 ;
+    border-color: none ;
+}
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 60px);
@@ -37,19 +43,14 @@ body {
 button {
   padding: 15px;
   font-size: 18px;
-  border: none;
+  border-color: bisque;
   border-radius: 8px;
   background-color: #ececec;
-  cursor: pointer;
   transition: background 0.2s;
 }
 
 button:hover {
-  background-color: #d4d4d4;
+  background-color: #383434;
+  color: aquamarine;
 }
 
-.credit {
-  margin-top: 10px;
-  font-size: 14px;
-  color: gray;
-}
